--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -79,17 +79,17 @@
               </ul>
               <div class="footer-social">
                 <ul class="social-menu d-flex">
-                  <li>
+                  <li class="social-item">
                     <a href="http://facebook.com.tw" class="footer-social-link">
                       <img src="assets/images/icon-fb.svg" alt="instagram">
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a href="http://instagram.com.tw" class="footer-social-link">
                       <img src="assets/images/icon-ig.svg" alt="instagram">
                     </a>
                   </li>
-                  <li>
+                  <li class="social-item">
                     <a href="https://line.me/zh-hant/" class="footer-social-link">
                       <img src="assets/images/icon-line.svg" alt="instagram">
                     </a>
@@ -113,7 +113,6 @@
             </li>
           </ul>
         </div>
-        <hr class="line">
       </div>
       <div class="footer-copyright d-flex flex-lg-row flex-md-row flex-column justify-content-lg-between justify-content-md-between justify-content-start">
         <p class="pb-2 pb-lg-0 pb-md-0">Copyright © 2020 Glasses.All rights reserved.</p>
