--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -327,7 +327,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        h5 {
+        date {
             font-size: 14px;
             color: #707070;
         }
@@ -397,10 +397,8 @@
         
     }
     &-textarea {
-        height: 50px;
-        @include mobile {
-            height: 136px;
-        }
+        height: 136px;
+        resize: none;
     }
     &-check-btn {
         width: 416px;
