--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -8,3 +8,8 @@
 @import "layout/page";
 
 @import "index.scss";
+@import "product.scss";
+@import "store.scss";
+@import "locate.scss";
+@import "question";
+@import "blog.scss";
