--- a/app/assets/style/layout/_page.scss
+++ b/app/assets/style/layout/_page.scss
@@ -3,10 +3,10 @@
         a {
             font-size: 18px;
             color: #555555;
-            border: 1px solid #555555;
+            outline: 1px solid #555555;
             padding: 12px 16px;
             @include mobile {
-                padding: 5px 15px;
+                padding: 10px 15px;
             }
             &:hover {
                 background-color: #000000;
@@ -20,12 +20,9 @@
         }
     }
     &-list {
-        margin-bottom: 160px;
-        @include pad {
-            margin-bottom: 96px;
-        }
+        margin-bottom: 80px;
         @include mobile {
-            margin-bottom: 56px;
+            margin-bottom: 64px;
         }
     }
 }
@@ -35,15 +32,19 @@
         font-size: 19px;
         color: #555555;
         padding: 11px 12px;
-        border: 1px solid #555555;
+        outline: 1px solid #555555;
         &:hover {
             background-color: #000000;
             color: #FFFFFF;
             transition: .5s;
         }
         @include mobile {
-            font-size: 12px;
-            padding: 10px 11px;
+            width: 75px;
+            font-size: 16px;
+            padding: 12px 13px 12px 14px;
         }
     }
+}
+.next-btn {
+    background-color: #F2F2F2;
 }
