--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -85,7 +85,6 @@
         }
     }
     &-list {
-        display: flex;
         column-gap: $text-l;
         @include pad {
             justify-content: space-evenly;
@@ -155,12 +154,17 @@
     &-img {
         img {
             height: 416px;
+            height: auto;
             @include pad {
-                height: 336px;
+                width: 50%;
+                margin: 0 auto;
             }
-            @include mobile {
-                height: 348px;
-            }
+            // @include pad {
+            //     height: 336px;
+            // }
+            // @include mobile {
+            //     height: 348px;
+            // }
         }
     }
     &-text {
@@ -231,10 +235,6 @@
             width: 100%;
             height: 240px;
         }
-        @include mobile{
-            width: 100%;
-            height: 240px;
-        }
     }
     &-bg-two{
         background: url(../images/home-section4-2.png) no-repeat 50% 50%;
@@ -242,10 +242,6 @@
         width: 100%;
         height: 240px;
         @include pad {
-            width: 100%;
-            height: 240px;
-        }
-        @include mobile{
             width: 100%;
             height: 240px;
         }
