--- a/app/assets/style/_locate.scss
+++ b/app/assets/style/_locate.scss
@@ -29,12 +29,18 @@
     }
     &-box {
         display: flex;
+        column-gap: 24px;
     }
     &-item {
-        width: 526px;
+        width: 40%;
         @include pad {
             width: 100%;
-            justify-content: space-between;
+            display: flex;
+            justify-content: center;
+            column-gap: 24px;
+        }
+        @include mobile {
+            flex-direction: column;
             align-items: center;
         }
         img {
@@ -80,14 +86,15 @@
         }
     }
     &-map {
-        width: 746px;
+        width: 56.5%;
         height: 422px;
         @include pad {
-            width: 696px;
-            height: 414px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
         }
         @include mobile {
-            width: 348px;
+            width: 100%;
             height: 208px;
         }
         iframe {
