--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -14,10 +14,12 @@
 
 <body>
   <header class="header">
-    <div class="container px-0">
+    <div class="container">
       <div class="header-box d-flex d-lg-flex d-md-flex justify-content-between align-items-center">
         <div class="header-hamburger-logo">
-          <a href="index.html">glasses</a>
+          <h1>
+            <a href="index.html">glasses</a>
+          </h1>
         </div>
         <nav class="d-lg-flex d-md-flex d-none">
           <ul class="header-menu">
